[project]
name = "isosurface-extraction-comparison"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Kotov",email = "rkotov@znu.edu.ua"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "trimesh (>=4.12.2,<5.0.0)",
    "ipympl (>=0.10.0,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyterlab (>=4.5.7,<5.0.0)"
]
